@@ -54,11 +54,15 @@ It has subdirectories:
       Headers that define extensions to the standard library.  No
       standard header refers to any of them.
 
+  scripts
+    Scripts that are used during the configure, build, make, or test
+    process.
+
   src
     Files that are used in constructing the library, but are not
     installed.
 
-  testsuites/[thread, 17_* to 27_*]
+  testsuites/[backward, demangle, ext, performance, thread, 17_* to 27_*]
     Test programs are here, and may be used to begin to exercise the 
     library.  Support for "make check" and "make check-install" is
     complete, and runs through all the subdirectories here when this
@@ -72,16 +76,13 @@ Other subdirectories contain variant versions of certain files
 that are meant to be copied or linked by the configure script.
 Currently these are:
 
+  config/abi
   config/cpu
-  config/os
   config/io
   config/locale
+  config/os
 
 In addition, three subdirectories are convenience libraries:
-
-  libio
-    Contains the subset of the GNU libio library needed for
-    C++. Currently not used.
 
   libmath
     Support routines needed for C++ math. Only needed if the
