@@ -11,8 +11,10 @@
 <!-- #include virtual="/include/header-subpages.html"-->
 <body>
 <h2>How to contribute</h2>
-<p>   
-The Standard C++ Library v3, or libstc++-2.90.x, follows an open development model. Active contributors are assigned maintainer-ship responsibility, and given write access to the CVS repository. First time submitors and all other potential contributors should follow this procedure:
+<p> The Standard C++ Library v3, follows an open development
+model. Active contributors are assigned maintainer-ship
+responsibility, and given write access to the CVS repository. First
+time contributors should follow this procedure:
 </p>
 
 <hr />
@@ -33,9 +35,8 @@ and their web-site is right
 <a href="http://webstore.ansi.org/ansidocstore/product.asp?sku=ISO%2FIEC+14882%2D1998">buy the standard on-line.)</a>
 </li>
 
-<li> The library working group bugs, and known defects, can be obtained at these web sites:
+<li> The library working group bugs, and known defects, can be obtained here:
  <a href="http://www.dkuug.dk/jtc1/sc22/wg21/">http://www.dkuug.dk/jtc1/sc22/wg21 </a>
- and <a href="http://www.comeaucomputing.com/iso/">http://www.comeaucomputing.com/iso/</a>
 </li>
 
 <li> The newsgroup dedicated to standardization issues is comp.std.c++: this FAQ for this group is quite useful and can be found <a href="http://reality.sgi.com/austern_mti/std-c++/faq.html"> here </a>.
@@ -60,11 +61,31 @@ and their web-site is right
 Small changes can be accepted without a copyright assignment form on
 file. New code and additions to the library need completed copyright
 assignment form on file at the FSF. Note: your employer may be required
-to fill out appropriate disclaimer forms as well. Here is the <a href="libstdc++-assign.txt"> form. </a>  
+to fill out appropriate disclaimer forms as well. 
+</p>
 
-Please contact <a href="mailto:benjamin@cygnus.com">Benjamin
+<p> Historically, the libstdc++ assignment form added the following question:
+</p>
+
+<code>[Which Belgian comic book character is better, Tintin or
+Asterix, and why?]</code>
+
+<p>
+While not strictly necessary, humoring the maintainers and answering
+this question would be appreciated.
+</p>
+
+<p>
+For more information about getting a copyright assignment, please see 
+<a href=http://www.gnu.org/prep/maintain_4.html#SEC4=> Legal Issues</a>
+</p>
+
+<p>
+Please contact <a href="mailto:bkoz+assign@redhat.com">Benjamin
 Kosnik</a> if you are confused about the assignment or have general
-licensing questions.
+licensing questions. When requesting an assignment form from <a
+HREF="mailto:assign@gnu.org">assign@gnu.org</a>, please cc
+the above libstdc++ maintainer so that progress can be monitored.
 </p>
 
 
@@ -82,7 +103,7 @@ response from the maintainers) it would have all of these pieces:
  <li> A description of the bug and how your patch fixes this bug. For
  new features a description of the feature and your implementation. </li>
 
- <li> A ChangeLog entry as plaintext; see the various ChangeLog files
+ <li> A ChangeLog entry as plain text; see the various ChangeLog files
  for format and content. If using you are using emacs as your editor,
  simply position the insertion point at the beginning of your change
  and hit CX-4a to bring up the appropriate ChangeLog
@@ -98,7 +119,7 @@ response from the maintainers) it would have all of these pieces:
 
  <li> When you have all these pieces, bundle them up in a mail message
 and send it to libstdc++@gcc.gnu.org. All patches and related
-discussion should be sent to the libstdc++ mailinglist. </li>
+discussion should be sent to the libstdc++ mailing list. </li>
 
 </ul>
 
