@@ -1,129 +1,0 @@
-The way to assign copyright to the Free Software Foundation is to sign
-an assignment contract.  This is what legally makes the Free Software
-Foundation the copyright holder so that we can register the copyright
-on the new version.  I'm assuming that you wrote these changes
-yourself; if other people wrote parts, we may need papers from them.
-
-If you are employed to do programming (even at a university), or have
-made an agreement with your employer or school saying it owns programs
-you write, then you and we need a signed piece of paper from your
-employer disclaiming rights to the program.
-
-The disclaimer should be signed by a vice president or general manager
-of the company.  If you can't get at them, anyone else authorized to
-license software produced there will do.  Here is a sample wording:
-
-  Digital Stimulation Corporation hereby disclaims all copyright interest
-  in the changes and enhancements made by Hugh Heffner to the program
-  "libstdc++", also including any future revisions of these changes and
-  enhancements.
-
-  Digital Stimulation Corporation affirms that it has no other
-  intellectual property interest that would undermine this release, or
-  the use of the Program, and will do nothing to undermine it in the
-  future.
-
-  <signature of Ty Coon>, 1 April 1987
-  Ty Coon, President of Vice, Digital Stimulation Corp.
-
-(If your employer says they do have an intellectual property claim
-that could conflict with the use of the program, then please put me in
-touch with a suitable representative of the company, so that we can
-negotiate what to do about it.)
-
-IMPORTANT: When you talk to your employer, *no matter what
-instructions they have given you*, don't fail to show them the sample
-disclaimer above, or a disclaimer with the details filled in for your
-specific case.  Companies are usually willing to sign a disclaimer
-without any fuss.  If you make your request less specific, you may
-open Pandora's box and cause a long and unnecessary delay.
-
-Below is the assignment contract that we usually use.  You need
-to print it out, sign it, and snail it to:
-
-Copyright Clerk
-c/o Free Software Foundation 
-59 Temple Place - Suite 330 
-Boston, MA  02111-1307,  USA 
-
-Please try to print the whole first page below on a single piece of
-paper.  If it doesn't fit on one printed page, put it on two sides of
-a single piece of paper.
-
-Don't forget to put down the date when you sign!  Spell out the month
-name--don't use a number for the month.  Dates using a number for the
-month are ambiguous; 2/8/95 means one thing in the US and another in
-Europe.
-
-Snail a copy of the employer's disclaimer as well.
-
-Please send me email about what you decide to do.  If you have any
-questions, or would like something to be changed, ask bkoz@gnu.org via
-email.
-                           ASSIGNMENT
-
-   For good and valuable consideration, receipt of which I
-acknowledge, I, [your name here], hereby transfer to the Free Software
-Foundation, Inc. (the "Foundation") my entire right, title, and
-interest (including all rights under copyright) in my changes and
-enhancements to the libstdc++ library, subject to the conditions
-below.  These changes and enhancements are herein called the "Work".
-The work hereby assigned shall also include any future revisions of
-these changes and enhancements hereafter made by me.
-
-   Upon thirty days' prior written notice, the "Foundation" agrees to
-grant me non-exclusive rights to use the Work (i.e. my changes and
-enhancements, not the program which I enhanced) as I see fit; (and
-the "Foundation"'s rights shall otherwise continue unchanged).
-
-   I hereby agree that if I have or acquire hereafter any patent or
-interface copyright or other intellectual property interest dominating
-the program enhanced by the Work (or use of that program), such
-dominating interest will not be used to undermine the effect of this
-assignment, i.e.  the "Foundation" and the general public will be
-licensed to use, in that program and its derivative works, without
-royalty or limitation, the subject matter of the dominating interest.
-This license provision will be binding on my heirs, assignees, or
-other successors to the dominating interest, as well as on me.
-
-   I hereby represent and warrant that I am the sole copyright holder
-for the Work and that I have the right and power to enter into this
-contract.  I hereby indemnify and hold harmless the "Foundation", its
-officers, employees, and agents against any and all claims, actions or
-damages (including attorney's reasonable fees) asserted by or paid to
-any party on account of a breach or alleged breach of the foregoing
-warranty.  I make no other express or implied warranty (including
-without limitation, in this disclaimer of warranty, any warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE).
-
-Agreed:  [signature]                    Date [Write the month with LETTERS]:
-
-
-For the "Foundation",
-Richard Stallman, head dude in charge
-
-Please do not delete the control-l character before this line.
-Please print this as a separate page.
-
-Please email a copy of the information on this page to
-fsf-records@gnu.ai.mit.edu, and cc bkoz@gnu.org, if you can, so that
-our clerk doesn't have to type it in.  Use your full name as the
-subject line.
-
-[For the copyright registration, what country are you a citizen of?
-What year were you born?]
-
-
-[Please write your email address here.]
-
-
-[Please write your snail address here, so we can snail a copy back to you.]
-
-
-
-[Which files have you changed so far, and which new files have you written
-so far?]
-
-
-[Which Belgian comic book character is better, Tintin or Asterix, and why?]
-
