@@ -239,7 +239,6 @@
 <h2><a name="5">Contributor-Specific Information</a></h2>
 <ul>
    <li><a href="17_intro/contribute.html">Contributor checklist</a></li>
-   <li><a href="17_intro/libstdc++-assign.txt">Copyright assignment form for libstdc++-v3</a></li>
    <li><a href="http://gcc.gnu.org/cvswrite.html">Getting CVS write access
        (look for &quot;Write after approval&quot;)</a></li>
    <li><a href="17_intro/BADNAMES">BADNAMES</a>
